@@ -1044,12 +1044,22 @@ repository, using [[git-annex-config]]. See its man page for a list.)
   To configure a default annex.addunlocked for all clones of the repository,
   this can be set in [[git-annex-config]](1).
   
-  (Using `git add` always adds files in unlocked form and it is not
-  affected by this setting.)
+  Using `git add` always adds files in unlocked form and it is not
+  affected by this setting. The assistant defaults to adding all files
+  unlocked, unless `annex.assistant.allowunlocked` is set.
   
   When a repository has core.symlinks set to false, or has an adjusted 
   unlocked branch checked out, this setting is ignored, and files are 
   always added to the repository in unlocked form.
+
+* `annex.assistant.allowunlocked`
+
+  The `git-annex assistant` defaults to adding all files unlocked, so that
+  files can be modified without the user needing to do anything to unlock
+  them.
+
+  If this is set to `true` then it will instead use the `annex.addunlocked`
+  configuration to decide which files to add unlocked.
 
 * `annex.numcopies`
 
